Hopefully get \addvspace right

--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -2556,7 +2556,17 @@
 %   The mechanism here is entirely different, but at least this works!
 %    \begin{macrocode}
 \cs_set_nopar:Npn \addpenalty { \galley_penalty_set_single:n }
-\cs_set_nopar:Npn \addvspace  { \galley_vspace_set_single:n }
+\cs_set:Npn \addvspace #1
+  {
+    \tl_if_empty:NTF \g_@@_interpar_vspace_user_tl
+      { \galley_vspace_set_single:n {#1} }
+      {
+        \dim_compare:nNnF
+          { \etex_glueexpr:D \g_@@_interpar_vspace_user_tl } 
+            > { \etex_glueexpr:D #1 \scan_stop: }
+          { \galley_vspace_set_single:n {#1} }
+      }
+  }
 %    \end{macrocode}
 %\end{macro}
 %
