--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -918,7 +918,6 @@
 \int_new:N \l_@@_current_par_lines_int
 %    \end{macrocode}
 % \end{variable}
-% \end{variable}
 %
 % \begin{variable}{\g_galley_restore_running_tl, \l_@@_restore_running_tl}
 %   When a parameter is altered from the \enquote{running} value to a
@@ -1254,7 +1253,6 @@
       }
   }
 %    \end{macrocode}
-% \end{macro}
 % \end{macro}
 % \end{macro}
 % \end{macro}
@@ -1776,8 +1774,6 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
-% \end{macro}
-% \end{macro}
 %
 % \subsection{Setting the primitive paragraph shape}
 %
@@ -1971,7 +1967,6 @@
 % \end{macro}
 % \end{macro}
 % \end{macro}
-% \end{macro}
 %
 % \subsection{Between paragraphs}
 %
@@ -2011,7 +2006,7 @@
         \skip_eval:n
           {
             \tl_if_empty:NF \g_@@_interpar_vspace_user_tl
-              { \g_@@_interpar_penalty_user_tl + }
+              { \g_@@_interpar_vspace_user_tl + }
             #1
           }
       }
@@ -2552,7 +2547,7 @@
 %    \begin{macrocode}
 %   At present we don't have a proper handling for the starred version
 %   of \tn{vspace}: just ignore it for the moment!
-%    \end{macrocode}
+%    \begin{macrocode}
 \DeclareRobustCommand \vspace
   {
     \@ifstar
