--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -153,6 +153,79 @@
 %   while preserving the color used in the box.
 % \end{function}
 %
+% \section{Drawing}
+%
+% The drawing functions provided here are \emph{highly} experimental. They
+% are inspired heavily by the system layer of \pkg{pgf} (most have the
+% same interface as the same functions in the latter's \cs{pgfsys@\ldots}
+% namespace). They are intended to form the basis for higher level drawing
+% interfaces, which themselves are likely to be further abstracted for user
+% access. Again, this model is heavily inspired by \pkg{pgf} and
+% Ti\textit{k}z.
+% 
+% These low level drawing interfaces abstract from the driver raw requirements
+% but still require an appreciation of the concepts of PostScript/PDF/SVG
+% graphic creation.
+%
+% At present \emph{not all drivers are covered} by the following.
+%
+% \begin{function}
+%   { \__driver_draw_begin:,  \__driver_draw_end:}
+%   \begin{syntax}
+%     \cs{__driver_draw_begin:}
+%     \meta{content}
+%     \cs{__driver_draw_end:}
+%   \end{syntax}
+%   Defines a drawing environment. This will be a scope for the purposes of
+%   the graphics state. Depending on the driver, other set up may or may not
+%   take place here. The natural size of the \meta{content} should be zero
+%   from the \TeX{} perspective: allowance for the size of the content must
+%   be made at a higher level (or indeed this can be skipped if the content is
+%   to overlap other material).
+% \end{function}
+%
+% \begin{function}
+%   {\__driver_draw_scope_begin:,  \__driver_draw_scope_end:}
+%   \begin{syntax}
+%     \cs{__driver_draw_scope_begin:}
+%     \meta{content}
+%     \cs{__driver_draw_scope_end:}
+%   \end{syntax}
+%   Defines a scope for drawing settings and so on. Changes to the graphic
+%   state and concepts such as color or linewidth are localised to a scope.
+%   This function pair must never be used if an partial path is under
+%   construction: such paths must be entirely contained at one unbroken
+%   scope level.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_moveto:nn}
+%   \begin{syntax}
+%     \cs{__driver_draw_move:nn} \Arg{x} \Arg{y}
+%   \end{syntax}
+%   Moves the current drawing reference point to (\meta{x}, \meta{y});
+%   any transformation matrix will apply.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_lineto:nn}
+%   \begin{syntax}
+%     \cs{__driver_draw_lineto:nn} \Arg{x} {y}
+%   \end{syntax}
+%   Adds a path from the current drawing reference point to
+%   (\meta{x}, \meta{y}; any transformation matrix will apply. Note that
+%   nothing is drawn until a fill or stroke operation is applied, and that
+%   the path may be discarded or used as a clip without appearing itself.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_curveto:nn}
+%   \begin{syntax}
+%     \cs{__driver_draw_lineto:nn} \Arg{x} {y}
+%   \end{syntax}
+%   Adds a path from the current drawing reference point to
+%   (\meta{x}, \meta{y}; any transformation matrix will apply. Note that
+%   nothing is drawn until a fill or stroke operation is applied, and that
+%   the path may be discarded or used as a clip without appearing itself.
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
