Various bits of documentation

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -203,27 +203,51 @@
 %     \cs{__driver_draw_move:nn} \Arg{x} \Arg{y}
 %   \end{syntax}
 %   Moves the current drawing reference point to (\meta{x}, \meta{y});
-%   any transformation matrix will apply.
+%   any active transformation matrix will apply.
 % \end{function}
 %
 % \begin{function}{\__driver_draw_lineto:nn}
 %   \begin{syntax}
-%     \cs{__driver_draw_lineto:nn} \Arg{x} {y}
+%     \cs{__driver_draw_lineto:nn} \Arg{x} \Arg{y}
 %   \end{syntax}
 %   Adds a path from the current drawing reference point to
-%   (\meta{x}, \meta{y}; any transformation matrix will apply. Note that
-%   nothing is drawn until a fill or stroke operation is applied, and that
+%   (\meta{x}, \meta{y}); any active transformation matrix will apply. Note
+%   that nothing is drawn until a fill or stroke operation is applied, and that
 %   the path may be discarded or used as a clip without appearing itself.
 % \end{function}
 %
-% \begin{function}{\__driver_draw_curveto:nn}
+% \begin{function}{\__driver_draw_curveto:nnnnnn}
 %   \begin{syntax}
-%     \cs{__driver_draw_lineto:nn} \Arg{x} {y}
+%     \cs{__driver_draw_curveto:nnnnnn} \Arg{x_1} \Arg{y_1}
+%       \Arg{x_2} \Arg{y_2} \Arg{x_3} \Arg{y_3}
 %   \end{syntax}
-%   Adds a path from the current drawing reference point to
-%   (\meta{x}, \meta{y}; any transformation matrix will apply. Note that
-%   nothing is drawn until a fill or stroke operation is applied, and that
-%   the path may be discarded or used as a clip without appearing itself.
+%   Adds a Bezier curve path from the current drawing reference point to
+%   (\meta{x_3}, \meta{y_3}), using (\meta{x_1}, \meta{y_1}) and
+%   (\meta{x_2}, \meta{y_2}) as control points; any active transformation
+%   matrix will apply.  Note that nothing is drawn until a fill or stroke
+%   operation is applied, and that the path may be discarded or used as a clip
+%   without appearing itself.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_rectangle:nnnn}
+%   \begin{syntax}
+%     \cs{__driver_draw_rectangle:nnnn} \Arg{x_1} \Arg{y_1} \Arg{x_2} \Arg{y_2}
+%   \end{syntax}
+%   Adds rectangular path from (\meta{x_1}, \meta{y_1}) to
+%   (\meta{x_2}, \meta{y_2}); any active transformation
+%   matrix will apply.  Note that nothing is drawn until a fill or stroke
+%   operation is applied, and that the path may be discarded or used as a clip
+%   without appearing itself.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_closepath:}
+%   \begin{syntax}
+%     \cs{__driver_draw_closepath:}
+%   \end{syntax}
+%   Closes an existing path, adding a line from the current point to the
+%   start of path. Note that nothing is drawn until a fill or stroke
+%   operation is applied, and that the path may be discarded or used as a clip
+%   without appearing itself.
 % \end{function}
 %
 % \end{documentation}
