More docs [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -198,6 +198,8 @@
 %   scope level.
 % \end{function}
 %
+% \subsection{Path construction}
+%
 % \begin{function}{\__driver_draw_moveto:nn}
 %   \begin{syntax}
 %     \cs{__driver_draw_move:nn} \Arg{x} \Arg{y}
@@ -237,7 +239,8 @@
 %   (\meta{x_2}, \meta{y_2}); any active transformation
 %   matrix will apply.  Note that nothing is drawn until a fill or stroke
 %   operation is applied, and that the path may be discarded or used as a clip
-%   without appearing itself.
+%   without appearing itself. The drawing cursor will be at
+%   (\meta{x_2}, \meta{y_2}) once the rectangle is constructed.
 % \end{function}
 %
 % \begin{function}{\__driver_draw_closepath:}
