More draw documentation [ski skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -241,6 +241,126 @@
 %   without appearing itself.
 % \end{function}
 %
+% \subsection{Stroking and filling}
+%
+% \begin{function}{\__driver_draw_stroke:, \__driver_draw_closestroke:}
+%   \begin{syntax}
+%     \meta{path construction}
+%     \cs{__driver_draw_stroke:}
+%   \end{syntax}
+%   Draws a line alone the current path, which will also be closed when
+%   \cs{__driver_draw_closestroke:} is used. The nature of the line drawn
+%   is influenced by settings for
+%   \begin{itemize}
+%     \item Line thickness
+%     \item Stroke color (or the current color if no specific stroke color
+%       is set)
+%     \item Line capping (how non-closed line ends should look)
+%     \item Join style (how a bend in the path should be rendered)
+%     \item Dash pattern
+%   \end{itemize}
+%   The path may also be used for clipping.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_fill:, \__driver_draw_fillstroke:}
+%   \begin{syntax}
+%     \meta{path construction}
+%     \cs{__driver_draw_fill:}
+%   \end{syntax}
+%   Fills the area surrounded by the current path: this will be closed prior
+%   to filling if it is not already. The \texttt{fillstroke} version will also
+%   stroke the path as described for \cs{__driver_draw_stroke:}. The fill is
+%   influenced by the setting for fill color (or the current color if no
+%   specific stroke color is set). The path may also be used for clipping.
+%   For paths which are self-intersecting or comprising multiple parts, the
+%   determination of which areas are inside the path is made using the nonzero
+%   winding rule number unless \cs{__driver_draw_eor_bool} is \texttt{true},
+%   in which case the even-odd rule is used.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_clip:}
+%   \begin{syntax}
+%     \meta{path construction}
+%     \cs{__driver_draw_clip:}
+%   \end{syntax}
+%   Indicates that the current path should be used for clipping, such that
+%   any subsequent material outside of the path (but within the current
+%   scope) will not be shown. This command should be given once a path is
+%   complete but before it is stroked or filled (if appropriate).
+% \end{function}
+%
+% \begin{function}{\__driver_draw_discardpath:}
+%   \begin{syntax}
+%     \meta{path construction}
+%     \cs{__driver_draw_discardpath:}
+%   \end{syntax}
+%   Discards the current path without stroking or filling. This is primarily
+%   useful for paths constructed purely for clipping, as this alone does not
+%   end the paths existence.
+% \end{function}
+%
+% \subsection{Stroke options}
+%
+% \begin{function}{\__driver_draw_linewidth:n}
+%   \begin{syntax}
+%     \cs{__driver_draw_linewidth:n} \Arg{dimexpr}
+%   \end{syntax}
+%   Sets the width to be used for stroking to \meta{dimexpr}.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_dash:nn}
+%   \begin{syntax}
+%     \cs{__driver_draw_dash:nn} \Arg{dash pattern} \Arg{phase}
+%   \end{syntax}
+%   Sets the pattern of dashing to be used when stroking a line. The
+%   \meta{dash pattern} should be a comma-separated list of dimension
+%   expressions. This is then interpreted as a series of pairs of line-on
+%   and line-off lengths. For example \texttt{3pt, 4pt} means that $3$\,pt on,
+%   $4$\,pt off, $3$\,pt on, and so on. A more complex pattern will also
+%   repeat: \texttt{3pt, 4pt, 1pt, 2pt} results in $3$\,pt on, $4$\,pt off,
+%   $1$\,pt on, $2$\,pt off, $3$\,pt on, and so on. An odd number of entries
+%   means that the last is repeated, for example \texttt{3pt} is equal to
+%   \texttt{3pt, 3pt}. An empty pattern yields a solid line.
+%   
+%   The \meta{phase} specifies an offset at the start of the cycle. For
+%   example, with a pattern \texttt{3pt} a phase of \texttt{1pt} will mean
+%   that the output is $2$\,pt on, $3$\,pt off, $3$\,pt on, $3$\,pt on,
+%   \emph{etc.}
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \__driver_draw_cap_butt:      ,
+%     \__driver_draw_cap_rectangle: ,
+%     \__driver_draw_cap_round:
+%   }
+%   \begin{syntax}
+%     \cs{__driver_draw_cap_butt:}
+%   \end{syntax}
+%   Sets the style of terminal stroke position to one of butt, rectangle or
+%   round.
+% \end{function}
+%
+% \begin{function}
+%   {
+%     \__driver_draw_join_bevel:      ,
+%     \__driver_draw_join_miter: ,
+%     \__driver_draw_join_round:
+%   }
+%   \begin{syntax}
+%     \cs{__driver_draw_cap_butt:}
+%   \end{syntax}
+%   Sets the style of stroke joins to one of bevel, miter or round.
+% \end{function}
+%
+% \begin{function}{\__driver_draw_miterlimit:n}
+%   \begin{syntax}
+%     \cs{__driver_draw_miterlimit:n} \Arg{dimexpr}
+%   \end{syntax}
+%   Sets the miter limit of lines joined as a miter, as described in the
+%   PDF and PostScript manuals.
+% \end{function}
+%
 % \end{documentation}
 %
 % \begin{implementation}
