Typos [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -282,8 +282,8 @@
 %   influenced by the setting for fill color (or the current color if no
 %   specific stroke color is set). The path may also be used for clipping.
 %   For paths which are self-intersecting or comprising multiple parts, the
-%   determination of which areas are inside the path is made using the nonzero
-%   winding rule number unless the even-odd rule is active.
+%   determination of which areas are inside the path is made using the non-zero
+%   winding number rule unless the even-odd rule is active.
 % \end{function}
 %
 % \begin{function}{\__driver_draw_nonzero_rule:, \__driver_draw_evenodd_rule:}
