--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1342,7 +1342,7 @@
 %
 % \begin{macro}[int]{\@@_draw_begin:, \@@_draw_end:}
 %   The |ps::[begin]| special here deals with positioning but allows us to
-%   continue on to a matching |ps::[end]|: contrast with |ps:| which positions
+%   continue on to a matching |ps::[end]|: contrast with |ps:|, which positions
 %   but where we can't split material between separate calls. The
 %   |@beginspecial|/|@endspecial| pair are from |special.pro| and correct the
 %   scale and $y$-axis direction. The reference point at the start of the box
