Stray spaces [ci skip]

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -337,7 +337,7 @@
 %   $1$\,pt on, $2$\,pt off, $3$\,pt on, and so on. An odd number of entries
 %   means that the last is repeated, for example \texttt{3pt} is equal to
 %   \texttt{3pt, 3pt}. An empty pattern yields a solid line.
-%   
+%
 %   The \meta{phase} specifies an offset at the start of the cycle. For
 %   example, with a pattern \texttt{3pt} a phase of \texttt{1pt} will mean
 %   that the output is $2$\,pt on, $3$\,pt off, $3$\,pt on, $3$\,pt on,
@@ -1474,7 +1474,7 @@
 \cs_new_protected_nopar:Npn \@@_draw_closestroke:
   {
     \@@_draw_closepath:
-    \@@_draw_stroke: 
+    \@@_draw_stroke:
   }
 \cs_new_protected_nopar:Npn \@@_draw_fill:
   {
@@ -1655,7 +1655,7 @@
       }
   }
 \cs_new_protected:Npn \@@_draw_color_gray:n #1
-  { 
+  {
     \@@_draw_literal:x { fp_eval:n {#1} ~ setgray  }
     \@@_draw_color_reset:
   }
@@ -1668,7 +1668,7 @@
     \@@_draw_literal:x
       {
         \fp_eval:n {#1} ~ \fp_eval:n {#2} ~ \fp_eval:n {#3} ~
-         setrgbcolor
+        setrgbcolor
       }
     \@@_draw_color_reset:
   }
@@ -1998,7 +1998,7 @@
 %   is needed when creating a scope.
 %     \begin{macrocode}
 \cs_new_protected_nopar:Npn \@@_draw_scope_begin:
-  { 
+  {
     \int_set_eq:NN
       \l_@@_draw_scope_int
       \g_@@_draw_scope_int
@@ -2132,12 +2132,12 @@
             <
               use~xlink:href =
                 "\c_hash_str l3path \int_use:N \g_@@_path_int " ~
-                #1 
+                #1
             />
           }
         \@@_draw_scope:x
-          { 
-            clip-path = 
+          {
+            clip-path =
               "url( \c_hash_str l3cp \int_use:N \g_@@_clip_path_int)"
           }
       }
@@ -2154,15 +2154,15 @@
 \cs_new_protected_nopar:Npn \@@_draw_closestroke:
   {
     \@@_draw_closepath:
-    \@@_draw_stroke: 
+    \@@_draw_stroke:
   }
 \cs_new_protected_nopar:Npn \@@_draw_fill:
   { \@@_draw_path:n { style="stroke:none" } }
 \cs_new_protected_nopar:Npn \@@_draw_fillstroke:
   { \@@_draw_path:n { } }
 \cs_new_protected_nopar:Npn \@@_draw_clip:
-  { \bool_set_true:N \l_@@_draw_clip_bool }
-\bool_new:N \l_@@_draw_clip_bool 
+  { \bool_gset_true:N \g_@@_draw_clip_bool }
+\bool_new:N \g_@@_draw_clip_bool
 \cs_new_protected_nopar:Npn \@@_draw_discardpath:
   {
     \bool_if:NT \g__driver_draw_clip_bool
@@ -2176,8 +2176,8 @@
             < /clipPath >
           }
         \@@_draw_scope:x
-          { 
-            clip-path = 
+          {
+            clip-path =
               "url( \c_hash_str l3cp \int_use:N \g_@@_clip_path_int)"
           }
       }
@@ -2228,7 +2228,6 @@
           stroke-offset=" #2 "
       }
   }
-
 \cs_new_protected:Npn \@@_draw_linewidth:n #1
   { \@@_draw_scope:x { stroke-width=" \dim_to_decimal:n {#1} " } }
 \cs_new_protected:Npn \@@_draw_miterlimit:n #1
@@ -2333,7 +2332,7 @@
                  (
                    #1 \c_percent_str ,
                    #2 \c_percent_str ,
-                   #3 \c_percent_str 
+                   #3 \c_percent_str
                  )
              "
              \bool_if:NT #5 { ~ }
@@ -2346,7 +2345,7 @@
                  (
                    #1 \c_percent_str ,
                    #2 \c_percent_str ,
-                   #3 \c_percent_str 
+                   #3 \c_percent_str
                  )
              "
           }
@@ -2403,7 +2402,7 @@
             stroke="none"~
             transform="scale(-1,1)~
             translate({?x},{?y})~
-            scale(-1,-1)"        
+            scale(-1,-1)"
         >
       }
     \box_use:N \l__driver_tmp_box
@@ -2414,7 +2413,6 @@
 %    \end{macrocode}
 % \end{variable}
 % \end{macro}
-
 %
 %    \begin{macrocode}
 %</dvisvgm>
