Simplify drawing box usage
There isn't really a gain in using the same number of box operations:
the outcomes are so different in terms of driver code that this
doesn't matter.

--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -1723,7 +1723,6 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_draw_hbox:Nnnnnnn}
-% \begin{variable}[aux]{\l_@@_tmp_box}
 %   Inside a picture |@beginspecial|/|@endspecial| are active, which is
 %   normally a good thing but means that the position and scaling will be off
 %   if the box is inserted directly. Instead, we need to reverse the effect of
@@ -1731,8 +1730,7 @@
 %   knowing where the reference point for the drawing is: saved as |l3x|/|l3y|
 %   at the start of the picture. Transformation here is relative to the
 %   drawing origin so has to be done purely in driver code not using \TeX{}
-%   offsets. To keep the number of box levels equal between drivers there is
-%   a no-op reboxing here (in the PDF mode version it is more useful).
+%   offsets.
 %     \begin{macrocode}
 \cs_new_protected:Npn \@@_draw_hbox:Nnnnnnn #1#2#3#4#5#6#7
   {
@@ -1742,17 +1740,16 @@
     \tex_special:D { ps::~72~Resolution~div~72~VResolution~div~neg~scale }
     \tex_special:D { ps::~magscale~{1~DVImag~div~dup~scale}~if }
     \tex_special:D { ps::~l3x~neg~l3y~neg~translate }
-    \hbox_set:Nn \l_@@_tmp_box { \box_use:N #1 }
-    \box_set_wd:Nn \l_@@_tmp_box { 0pt }
-    \box_set_ht:Nn \l_@@_tmp_box { 0pt }
-    \box_set_dp:Nn \l_@@_tmp_box { 0pt }
-    \box_use:N \l__driver_tmp_box
+    \group_begin:
+      \box_set_wd:Nn #1 { 0pt }
+      \box_set_ht:Nn #1 { 0pt }
+      \box_set_dp:Nn #1 { 0pt }
+      \box_use:N #1
+    \group_end:
     \tex_special:D { ps::[begin] }
     \@@_scope_end:
   }
-\box_new:N \l_@@_tmp_box
 %    \end{macrocode}
-% \end{variable}
 % \end{macro}
 %
 %    \begin{macrocode}
@@ -2386,32 +2383,31 @@
 % \end{macro}
 %
 % \begin{macro}[int]{\@@_draw_hbox:Nnnnnnn}
-% \begin{variable}[aux]{\l_@@_tmp_box}
+%   No special savings can be made here: simply displace the box inside
+%   a scope. As there is nothing to re-box, just make the box passed of
+%   zero size.
 %     \begin{macrocode}
 \cs_new_protected:Npn \@@_draw_hbox:Nnnnnnn #1#2#3#4#5#6#7
   {
     \@@_scope_begin:
     \@@_draw_transformcm:nnnnnn {#2} {#3} {#4} {#5} {#6} {#7}
-    \hbox_set:Nn \l_@@_tmp_box { \box_use:N #1 }
-    \box_set_wd:Nn \l_@@_tmp_box { 0pt }
-    \box_set_ht:Nn \l_@@_tmp_box { 0pt }
-    \box_set_dp:Nn \l_@@_tmp_box { 0pt }
     \@@_literal:n
       {
         < g~
             stroke="none"~
-            transform="scale(-1,1)~
-            translate({?x},{?y})~
-            scale(-1,-1)"
+            transform="scale(-1,1)~translate({?x},{?y})~scale(-1,-1)"
         >
       }
-    \box_use:N \l__driver_tmp_box
+    \group_begin:
+      \box_set_wd:Nn #1 { 0pt }
+      \box_set_ht:Nn #1 { 0pt }
+      \box_set_dp:Nn #1 { 0pt }
+      \box_use:N #1
+    \group_end:
     \@@_literal:n { </g> }
     \@@_scope_end:
   }
-\box_new:N \l_@@_tmp_box
 %    \end{macrocode}
-% \end{variable}
 % \end{macro}
 %
 %    \begin{macrocode}
