--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -2017,7 +2017,7 @@
     \@@_draw_literal:n { <g~ #1 > }
     \int_gincr:N \g_@@_draw_scope_int
   }
-\cs_generate_variant:Nn \__driver_draw_scope:n { x }
+\cs_generate_variant:Nn \@@_draw_scope:n { x }
 \int_new:N \g_@@_draw_scope_int
 \int_new:N \l_@@_draw_scope_int
 %    \end{macrocode}
@@ -2117,7 +2117,7 @@
   { \@@_draw_add_to_path:n { Z } }
 \cs_new_protected_nopar:Npn \@@_draw_path:n #1
   {
-    \bool_if:NTF \g__driver_draw_clip_bool
+    \bool_if:NTF \g_@@_draw_clip_bool
       {
         \int_gincr:N \g_@@_clip_path_int
         \@@_draw_literal:x
@@ -2140,10 +2140,10 @@
       }
       {
         \@@_draw_literal:x
-          { <path ~ d=" \g__driver_draw_path_tl " ~ #1/> }
+          { <path ~ d=" \g_@@_draw_path_tl " ~ #1 /> }
       }
-    \tl_gclear:N \g__driver_draw_path_tl
-    \bool_gset_false:N \g__driver_draw_clip_bool
+    \tl_gclear:N \g_@@_draw_path_tl
+    \bool_gset_false:N \g_@@_draw_clip_bool
   }
 \int_new:N \g_@@_path_int
 \cs_new_protected_nopar:Npn \@@_draw_stroke:
@@ -2162,7 +2162,7 @@
 \bool_new:N \g_@@_draw_clip_bool
 \cs_new_protected_nopar:Npn \@@_draw_discardpath:
   {
-    \bool_if:NT \g__driver_draw_clip_bool
+    \bool_if:NT \g_@@_draw_clip_bool
       {
         \int_gincr:N \g_@@_clip_path_int
         \@@_draw_literal:x
@@ -2178,8 +2178,8 @@
               "url( \c_hash_str l3cp \int_use:N \g_@@_clip_path_int)"
           }
       }
-    \tl_gclear:N \g__driver_draw_path_tl
-    \bool_gset_false:N \g__driver_draw_clip_bool
+    \tl_gclear:N \g_@@_draw_path_tl
+    \bool_gset_false:N \g_@@_draw_clip_bool
   }
 %    \end{macrocode}
 % \end{variable}
