--- a/l3kernel/l3drivers.dtx
+++ b/l3kernel/l3drivers.dtx
@@ -2276,9 +2276,9 @@
     \use:x
       {
         \@@_draw_color_rgb_auxii:nnn
-          { \fp_eval:n { -100 * ( (#3) * ( 1 - (#6) ) -1 ) } }
-          { \fp_eval:n { -100 * ( (#4) * ( 1 - (#6) ) + #6 -1 ) } }
-          { \fp_eval:n { -100 * ( (#5) * ( 1 - (#6) ) + #6 -1 ) } }
+          { \fp_eval:n { -100 * ( (#3) * ( 1 - (#6) ) - 1 ) } }
+          { \fp_eval:n { -100 * ( (#4) * ( 1 - (#6) ) + #6 - 1 ) } }
+          { \fp_eval:n { -100 * ( (#5) * ( 1 - (#6) ) + #6 - 1 ) } }
       }
       #1 #2
   }
