--- a/l3experimental/xgalley/l3galley.dtx
+++ b/l3experimental/xgalley/l3galley.dtx
@@ -1012,7 +1012,7 @@
 % \begin{macro}{\@@_initialise_settings:}
 %   This sets the local values of the various galley settings. The
 %   flag \cs{l_@@_parshape_multipar_bool} is set \texttt{true} here
-%   as it allows an efficency saving in parshape setting: only
+%   as it allows an efficiency saving in parshape setting: only
 %   when it is actively set \texttt{false} is action needed.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_initialise_settings:
